fixed issue where specificity caused dt elements to misalign

--- a/core/styles/default/default.css
+++ b/core/styles/default/default.css
@@ -328,7 +328,7 @@ dd {
   margin: 0;
 }
 dd + dt {
-  padding-top: 1.5rem;
+  margin-top: 1.5rem;
 }
 /*@Tables*/
 th {
