--- a/core/styles/default/elements/_grouping.less
+++ b/core/styles/default/elements/_grouping.less
@@ -93,7 +93,7 @@ dd {
 //   margin-bottom: @devault_vru;
 // }
 dd + dt {
-  padding-top: @default_vru; // only because can’t add margin-bottom to last `dd` in a group
+  margin-top: @default_vru; // only because can’t add margin-bottom to last `dd` in a group
 }
 //---- @end Lists ----//
 
