--- a/core/styles/project.css
+++ b/core/styles/project.css
@@ -1174,7 +1174,7 @@ dd > ul {
   float: left;
 }
 .dl--Horiz > dd + dt {
-  padding-top: 0;
+  margin-top: 0;
 }
 .dl--Horiz--Sml > dt {
   width: 23.60679775%;
