--- a/core/styles/typo/grouping/_maps.less
+++ b/core/styles/typo/grouping/_maps.less
@@ -76,7 +76,7 @@ dd {
   > dd {
     float: left;
   }
-  > dd + dt {padding-top: 0;} // undo padding from reset
+  > dd + dt {margin-top: 0;} // undo margin from defualt.less
 }
 .map-horiz-mx(@termwidth) {
   > dt {width: @termwidth;}
